--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,18 @@ server {
   server_name localhost;
 
   # Root directory for your HTML files
-  root /var/www/html;
+  #root /var/www/html;
 
   # Index files to serve
-  index index.html index.htm;
+  #index index.html index.htm;
 
-  # Location blocks for specific resources (optional)
-  # ...
+  location / {
+      proxy_buffering off;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Port $server_port;
+      proxy_pass http://example.org/;
+  }
 
 }
 
