--- a/default.conf
+++ b/default.conf
@@ -10,7 +10,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
-        proxy_pass http://example.org/;
+        proxy_pass http://pdmtdagap01.cl.bsch/;
     }
 
 
